feat:買い方ページ etc

--- a/banana-home.html
+++ b/banana-home.html
@@ -552,6 +552,13 @@
             background: #fff;
             box-shadow: 0 1px 2px rgba(0,0,0,.06);
         }
+
+        .course-card:hover{
+            border: 1px dotted #70bcff;;
+            border-left: 4px solid #70bcff;;
+            background: #edf7ff;;
+        }
+
         .course-card .labels{
             margin-top: -4px;
         }
@@ -738,7 +745,7 @@
         <header class="header" aria-label="サイトヘッダー">
             <h1 class="header1">
                 <span class="sr-only">驚額の殿堂3（スリー）｜banana</span>
-                <img src="./images/logo2.png" alt="驚額殿堂 Dendo of kyogaku" height="60"/>
+                <img src="./images/logo2.webp" alt="驚額殿堂 Dendo of kyogaku" height="60"/>
             </h1>
             <div class="header2">
                 <div class="header-text">
@@ -755,7 +762,7 @@
                     </div>
                 </div>
                 <div class="header-icon">
-                    <img src="./images/npo_user.png" alt="ユーザーアイコン" height="45"/>
+                    <img src="./images/npo_user.webp" alt="ユーザーアイコン" height="45"/>
                 </div>
             </div>
         </header>
@@ -772,7 +779,7 @@
                   </div>
                   <div class="top-bar2">
                     <a href="./resnpo.html">
-                      <img class="resnpo" src="./images/resnpo_logo2.png" alt="resnpo" height="20"/>
+                      <img class="resnpo" src="./images/resnpo_logo2.webp" alt="resnpo" height="20"/>
                     </a>
                     <span class="top-bar2-box"><i class="fa-solid fa-file-pen" aria-hidden="true"></i>メモ一覧</span>
                     <span class="top-bar2-box">English</span>
@@ -783,7 +790,7 @@
             <!-- ミドルバー -->
             <section class="middle-bar" aria-label="ページ情報">
                 <div class="middle-bar-icon">
-                  <img src="./images/npo_user.png" alt="ユーザーロゴ" height="50"/>
+                  <img src="./images/npo_user.webp" alt="ユーザーロゴ" height="50"/>
                 </div>
                 <div class="middle-bar-contents">
                     <p class="middle-bar-my-page">
@@ -900,10 +907,10 @@
 
                         <div class="courses-grid" role="list">
                             <article class="course-card" data-year="2025" role="listitem">
-                            <img src="./images/NPTS.png" alt="NPTS" width="60">
+                            <img src="./images/how-to-buy.webp" alt="注文方法" width="60" height="60">
                             <div class="labels">
-                                <p class="code">GENKA25 <span class="star-icon"><i class="fa-solid fa-star" aria-hidden="true"></i></span></p>
-                                <a class="title" href="./genka.html">原価</a>
+                                <p class="code">HOWTOBUY <span class="star-icon"><i class="fa-solid fa-star" aria-hidden="true"></i></span></p>
+                                <a class="title" href="./how-to-buy.html">注文方法</a>
                                 <p class="meta">2025　秋 <br><span class="text-muted">担当</span> 驚額の殿堂3(スリー)</p>
                                 <p class="meta">
                                 <span class="text-success"><i class="text-play fa-regular fa-circle-play" aria-hidden="true"></i></span>
@@ -918,7 +925,7 @@
                             </article>
 
                             <article class="course-card" data-year="2025" role="listitem">
-                            <img src="./images/NPTS.png" alt="NPTS" width="60">
+                            <img src="./images/doujin_phys.webp" alt="技術同人誌『フランクフルト』 買いにきてんぽ〜 300円 読んで学士(情報科学)目指すんぽ！" width="60">
                             <div class="labels">
                                 <p class="code">DOUJIN25 <span class="star-icon"><i class="fa-solid fa-star" aria-hidden="true"></i></span></p>
                                 <a class="title" href="./doujin25.html">技術同人誌『フランクフルト』</a>
@@ -936,7 +943,7 @@
                             </article>
 
                             <article class="course-card" data-year="2025" role="listitem">
-                            <img src="./images/never-stop-npotaso.png" alt="NPTS" width="60">
+                            <img src="./images/never-stop-npotaso.gif" alt="NPTS" width="60">
                             <div class="labels">
                                 <p class="code">GAME25 <span class="star-icon"><i class="fa-solid fa-star" aria-hidden="true"></i></span></p>
                                 <a class="title" href="./game.html">んぽたそゲーム</a>
@@ -954,7 +961,7 @@
                             </article>
 
                             <article class="course-card" data-year="2025" role="listitem">
-                            <img src="./images/gallery_icon.png" alt="gallery" width="60">
+                            <img src="./images/gallery_icon.webp" alt="gallery" width="60">
                             <div class="labels">
                                 <p class="code">GALLERY <span class="star-icon"><i class="fa-solid fa-star" aria-hidden="true"></i></span></p>
                                 <a class="title" href="./gallery.html">ギャラリー</a>
@@ -971,8 +978,26 @@
                             </div>
                             </article>
 
+                            <article class="course-card" data-year="2025" role="listitem">
+                                <img src="./images/NPTS.webp" alt="NPTS" width="60">
+                                <div class="labels">
+                                    <p class="code">GENKA25 <span class="star-icon"><i class="fa-solid fa-star" aria-hidden="true"></i></span></p>
+                                    <a class="title" href="./genka.html">原価</a>
+                                    <p class="meta">2025　秋 <br><span class="text-muted">担当</span> 驚額の殿堂3(スリー)</p>
+                                    <p class="meta">
+                                    <span class="text-success"><i class="text-play fa-regular fa-circle-play" aria-hidden="true"></i></span>
+                                    <span class="badge"><span class="text-primary">movie</span></span>
+                                    <span class="text-fade"><i class="fa-solid fa-volume-high" aria-hidden="true"></i></span>
+                                    <span class="text-fade"><i class="fa-solid fa-pen" aria-hidden="true"></i></span>
+                                    <span class="text-fade"><i class="fa-solid fa-file" aria-hidden="true"></i></span>
+                                    <span class="text-fade"><i class="fa-solid fa-message" aria-hidden="true"></i></span>
+                                    <span class="text-fade"><i class="fa-solid fa-user-check" aria-hidden="true"></i></span>
+                                    </p>
+                                </div>
+                            </article>
+
                             <article class="course-card" data-year="2024" role="listitem">
-                            <img src="./images/kyogaku-2024.png" alt="kyogaku web2024" width="60">
+                            <img src="./images/kyogaku-2024.webp" alt="kyogaku web2024" width="60">
                             <div class="labels">
                                 <p class="code">NPTS24 <span class="star-icon"><i class="fa-solid fa-star" aria-hidden="true"></i></span></p>
                                 <a class="title" href="./2024/">昨年のページ</a>
@@ -990,7 +1015,7 @@
                             </article>
 
                             <article class="course-card" data-year="2023" role="listitem">
-                            <img src="./images/kyogaku-2023.png" alt="kyogaku web2023" width="60">
+                            <img src="./images/kyogaku-2023.webp" alt="kyogaku web2023" width="60">
                             <div class="labels">
                                 <p class="code">NPTS23 <span class="star-icon"><i class="fa-solid fa-star" aria-hidden="true"></i></span></p>
                                 <a class="title" href="./2023/">一昨年のページ</a>
@@ -1057,7 +1082,7 @@
         </div>
         <div class="footer2">
           powered by 
-          <div class="footer-icon"><img src="./images/logo3.png" alt="Dendo of kyogaku" height="45"/></div>
+          <div class="footer-icon"><img src="./images/logo3.webp" alt="Dendo of kyogaku" height="45"/></div>
         </div>
       </footer>
     <!-- フッターここまで -->
