--- a/game.html
+++ b/game.html
@@ -423,8 +423,11 @@
             border-top: 1px solid #ddd;
             border-left: 1px solid #ddd;
             border-right: 1px solid #ddd;
-            margin-bottom: 0;
+            border-bottom: 2px solid #ddd;
+            margin: 0 auto;
             padding-left: 8px;
+            padding-top: 5px;
+            font-size: 14px;
         }
 
         .card-item{
@@ -433,12 +436,12 @@
             gap: 12px;
             background-color: #fff;
             border: 1px solid #ddd;
-            border-radius: 6px;
+            border-radius: 2px;
             padding: 14px 16px;
         }
         .card-icon{
-            color: #55a308;
-            font-size: 1.6em;
+            color: #ddd;
+            font-size: 2em;
             flex-shrink: 0;
         }
         .card-text{
@@ -495,7 +498,7 @@
     <div class="main">
         <!-- ヘッダーここから -->
             <header class="header">
-                <h1 class="header1"><img src="./images/logo2.png" alt="驚額殿堂 Dendo of kyogaku" height="60"/></h1>
+                <h1 class="header1"><img src="./images/logo2.webp" alt="驚額殿堂 Dendo of kyogaku" height="60"/></h1>
                 <div class="header2">
                     <div class="header-text">
                         <div class="kikan-date">
@@ -510,7 +513,7 @@
                             <a href="./index.html">ログアウト</a>
                         </div>
                     </div>
-                    <div class="header-icon"><img src="./images/npo_user.png" alt="ユーザーアイコン" height="45"/></div>
+                    <div class="header-icon"><img src="./images/npo_user.webp" alt="ユーザーアイコン" height="45"/></div>
                 </div>
             </header>
         <!-- ヘッダーここまで -->
@@ -525,7 +528,7 @@
                     </div>
                     <div class="top-bar2">
                         <a href="./resnpo.html">
-                          <img class="resnpo" src="./images/resnpo_logo2.png" alt="resnpo" height="20">
+                          <img class="resnpo" src="./images/resnpo_logo2.webp" alt="resnpo" height="20">
                         </a>
                         <span class="top-bar2-box"><i class="fa-solid fa-file-pen" aria-hidden="true"></i>メモ一覧</span>
                         <span class="top-bar2-box">English</span>
@@ -533,7 +536,7 @@
                 </section>
     
                 <section class="middle-bar" aria-label="コースヘッダー">
-                    <div class="middle-bar-icon"><img src="./images/never-stop-npotaso.png" alt="running npotaso" height="50"/></div>
+                    <div class="middle-bar-icon"><img src="./images/never-stop-npotaso.gif" alt="running npotaso" height="50"/></div>
                     <div class="middle-bar-contents">
                         <div class="course-meta">
                             <div class="course-meta1">
@@ -570,7 +573,7 @@
             <section class="main-container">
                 <h2>んぽたそゲーム</h2>
                 <p>んぽたそ お手製のゲームが遊べるんぽ！</p>
-                <div class="contents-card-header"><i class="fa-solid fa-book" aria-hidden="true" style="margin-right: 5px;"></i>コンテンツ</div>
+                <p class="contents-card-header"><i class="fa-solid fa-book text-green" aria-hidden="true" style="margin-right: 5px;"></i>コンテンツ(更新順)</p>
                 <div class="contents-card">
                     <a href="https://kabeyaburi.lapla.dev" target="_blank" rel="noopener">
                         <div class="card-item">
@@ -614,7 +617,7 @@
         </div>
         <div class="footer2">
           powered by 
-          <div class="footer-icon"><img src="./images/logo3.png" alt="Dendo of kyogaku" height="45"/></div>
+          <div class="footer-icon"><img src="./images/logo3.webp" alt="Dendo of kyogaku" height="45"/></div>
         </div>
       </footer>
     <!-- フッターここまで -->
