--- a/genka.html
+++ b/genka.html
@@ -391,7 +391,7 @@
     <div class="main">
         <!-- ヘッダーここから -->
             <header class="header">
-                <h1 class="header1"><img src="./images/logo2.png" alt="驚額殿堂 Dendo of kyogaku" height="60"/></h1>
+                <h1 class="header1"><img src="./images/logo2.webp" alt="驚額殿堂 Dendo of kyogaku" height="60"/></h1>
                 <div class="header2">
                     <div class="header-text">
                         <div class="kikan-date">
@@ -406,7 +406,7 @@
                             <a href="./index.html">ログアウト</a>
                         </div>
                     </div>
-                    <div class="header-icon"><img src="./images/npo_user.png" alt="ユーザーアイコン" height="45"/></div>
+                    <div class="header-icon"><img src="./images/npo_user.webp" alt="ユーザーアイコン" height="45"/></div>
                 </div>
             </header>
         <!-- ヘッダーここまで -->
@@ -421,7 +421,7 @@
                     </div>
                     <div class="top-bar2">
                         <a href="./resnpo.html">
-                          <img class="resnpo" src="./images/resnpo_logo2.png" alt="resnpo" height="20">
+                          <img class="resnpo" src="./images/resnpo_logo2.webp" alt="resnpo" height="20">
                         </a>
                         <span class="top-bar2-box"><i class="fa-solid fa-file-pen" aria-hidden="true"></i>メモ一覧</span>
                         <span class="top-bar2-box">English</span>
@@ -429,7 +429,7 @@
                 </section>
     
                 <section class="middle-bar" aria-label="コースヘッダー">
-                    <div class="middle-bar-icon"><img src="./images/NPTS.png" alt="NPTS" height="50"/></div>
+                    <div class="middle-bar-icon"><img src="./images/NPTS.webp" alt="NPTS" height="50"/></div>
                     <div class="middle-bar-contents">
                         <div class="course-meta">
                             <div class="course-meta1">
@@ -482,7 +482,7 @@
         </div>
         <div class="footer2">
           powered by 
-          <div class="footer-icon"><img src="./images/logo3.png" alt="Dendo of kyogaku" height="45"/></div>
+          <div class="footer-icon"><img src="./images/logo3.webp" alt="Dendo of kyogaku" height="45"/></div>
         </div>
     </footer>
     <!-- フッターここまで -->
