--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
     <div id="enter" role="dialog" aria-modal="true" aria-label="ログインダイアログ">
       <div class="container">
         <header>
-          <h1><img src="./images/logo1.png" alt="驚額殿堂 Dendo of kyogaku" width="265" height="76"/></h1>
+          <h1><img src="./images/logo1.webp" alt="驚額殿堂 Dendo of kyogaku" width="265" height="76"/></h1>
           <h2>フランクフルトシステム (Frankfurt System)</h2>
         </header>
 
