--- a/resnpo.html
+++ b/resnpo.html
@@ -327,7 +327,7 @@ document.addEventListener('DOMContentLoaded', () => {
   const RANDOM_MIN = 1;
   const RANDOM_MAX = 999;               // 1〜999 の中から抽選
   const IMAGE_PROBABILITY = 0.35;       // 35% の確率で画像表示
-  const RANDOM_IMAGE_SRC = "./images/lucky.png"; 
+  const RANDOM_IMAGE_SRC = "./images/lucky.webp"; 
 
   // ランダム整数（min〜max）
   function randInt(min, max){
@@ -378,10 +378,10 @@ document.addEventListener('DOMContentLoaded', () => {
         <hr class="dotted-line">
         
         <div class="apps">
-            <img class="resnpo-img" src="./images/resnpo.png" alt="resnpo" height="100px">
+            <img class="resnpo-img" src="./images/resnpo.webp" alt="resnpo" height="100px">
             <p>アプリ未設定の方は</p>
             <div class="apps-button">
-                <img class="app-icon" src="./images/npo_orange.png" alt="npo orange" width="40px">
+                <img class="app-icon" src="./images/npo_orange.webp" alt="npo orange" width="40px">
                 <p>resnpoアプリをダウンロード</p>
             </div>
             <p>アプリに設定するサーバは<br><span class="deka">https://<span class="aka">kyogaku.yokohama.dev/</span></span></p>
