--- a/gallery.html
+++ b/gallery.html
@@ -396,7 +396,7 @@
     <div class="main">
     <!-- ヘッダーここから -->
         <header class="header">
-            <h1 class="header1"><img src="./images/logo2.png" alt="驚額殿堂 Dendo of kyogaku" height="60"/></h1>
+            <h1 class="header1"><img src="./images/logo2.webp" alt="驚額殿堂 Dendo of kyogaku" height="60"/></h1>
             <div class="header2">
                 <div class="header-text">
                     <div class="kikan-date">
@@ -411,7 +411,7 @@
                         <a href="./index.html">ログアウト</a>
                     </div>
                 </div>
-                <div class="header-icon"><img src="./images/npo_user.png" alt="ユーザーアイコン" height="45"/></div>
+                <div class="header-icon"><img src="./images/npo_user.webp" alt="ユーザーアイコン" height="45"/></div>
             </div>
         </header>
     <!-- ヘッダーここまで -->
@@ -426,7 +426,7 @@
                 </div>
                 <div class="top-bar2">
                     <a href="./resnpo.html">
-                      <img class="resnpo" src="./images/resnpo_logo2.png" alt="resnpo" height="20">
+                      <img class="resnpo" src="./images/resnpo_logo2.webp" alt="resnpo" height="20">
                     </a>
                     <span class="top-bar2-box"><i class="fa-solid fa-file-pen" aria-hidden="true"></i>メモ一覧</span>
                     <span class="top-bar2-box">English</span>
@@ -434,7 +434,7 @@
             </section>
 
             <section class="middle-bar" aria-label="コースヘッダー">
-                <div class="middle-bar-icon"><img src="./images/gallery_icon.png" alt="NPTS" height="50"/></div>
+                <div class="middle-bar-icon"><img src="./images/gallery_icon.webp" alt="NPTS" height="50"/></div>
                 <div class="middle-bar-contents">
                     <div class="course-meta">
                         <div class="course-meta1">
@@ -469,13 +469,13 @@
                 </div>
             </section>
             <section class="gallery-container">
-                <img src="https://kyogaku.yokohama.dev/images/logo1.png" alt="驚額殿堂 Dendo of kyogaku" width="100%">
+                <img src="https://kyogaku.yokohama.dev/images/logo1.webp" alt="驚額殿堂 Dendo of kyogaku" width="100%">
                 <img src="./images/gallery/frank.webp" alt="フランクフルト" width="500px">
                 <img src="./images/gallery/kyogaku.jpg" alt="驚額の殿堂" width="500px">
                 <img src="./images/gallery/niku.jpg" alt="肉が焼けている写真" width="500px">
-                <img src="./images/resnpo_logo2.png" alt="resnpo" width="100%">
+                <img src="./images/resnpo_logo2.webp" alt="resnpo" width="100%">
                 <video controls width="500"><source src="./images/gallery/video.mp4" type="video/mp4" /></video>
-                <img src="./images/npo_purple.png" alt="npo purple" width="100%">
+                <img src="./images/npo_purple.webp" alt="npo purple" width="100%">
             </section>
         </main>
     <!-- コンテンツここまで -->
@@ -493,7 +493,7 @@
         </div>
         <div class="footer2">
           powered by 
-          <div class="footer-icon"><img src="./images/logo3.png" alt="Dendo of kyogaku" height="45"/></div>
+          <div class="footer-icon"><img src="./images/logo3.webp" alt="Dendo of kyogaku" height="45"/></div>
         </div>
       </footer>
     <!-- フッターここまで -->
