--- a/doujin25.html
+++ b/doujin25.html
@@ -467,7 +467,7 @@
                 </section>
     
                 <section class="middle-bar" aria-label="コースヘッダー">
-                    <div class="middle-bar-icon"><img src="./images/NPTS.webp" alt="NPTS" height="50"/></div>
+                    <div class="middle-bar-icon"><img src="./images/doujin_phys.webp" alt="技術同人誌『フランクフルト』 買いにきてんぽ〜 300円 読んで学士(情報科学)目指すんぽ！" width="50"></div>
                     <div class="middle-bar-contents">
                         <div class="course-meta">
                             <div class="course-meta1">
