--- a/game.html
+++ b/game.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>驚額の殿堂3（スリー） | banana(バナナ) - 技術同人誌 </title>
+    <title>驚額の殿堂3（スリー） | banana(バナナ) - ゲーム </title>
     <meta charset="utf-8" />
     <meta name="description" content="焼きそばホグワーツの教育支援システム" />
     <meta name="keywords" content="雙峰祭, フランクフルト, 驚額の殿堂,banana">
