--- a/signage.html
+++ b/signage.html
@@ -423,6 +423,7 @@
         .attention{
             font-size: 1.1em;
             margin-bottom: 50px;
+            color:#f00;
         }
 
         .u-lg{ font-size: 1.25em; }
