--- a/banana-home.html
+++ b/banana-home.html
@@ -1265,13 +1265,13 @@
             if (top3[i]) {
                 el.textContent = top3[i].name;
             } else {
-                el.textContent = "まだいないんぽ〜";
+                el.textContent = "";
             }
             });
         } catch (err) {
             console.error("太客データ取得エラー:", err);
             document.querySelectorAll(".hutokyaku-name").forEach(el => {
-            el.textContent = "まだいないんぽ〜";
+            el.textContent = "";
             });
         }
         }
